deploy/deployment.template.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: photo-garden
      containers:
      - {}
