deploy/service.queue-mgmt.yml
apiVersion: v1
kind: Service
metadata:
  name: queue-mgmt
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: queue
