deploy/ingress.gateway.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: gateway-ingress
spec:
  tls:
  - secretName: photo-garden-cert-gateway-secret
    hosts:
    - api.photo.garden
  rules:
  - host: api.photo.garden
    http:
      paths:
      - backend:
          serviceName: gateway
          servicePort: 80
        path: /
